# rust-web-handson

./: .gitignore  Cargo.toml  README.md  fuga.html  sample.env
docs/: anomalies.html  columns.html  (+10 more)
migrations/schema/: 20220516040042_create_todo_table.down.sql  20220516040042_create_todo_table.up.sql  20220727060347_create_other.down.sql  20220727060347_create_other.up.sql  Cargo.toml
migrations/schema/src/: lib.rs  m20220728_120310_create_location_owners_table.rs  m20220728_123218_create_locations_table.rs  m20220728_123353_create_signages_table.rs  m20220728_123518_create_advertisers_table.rs  m20220728_135138_create_advertiser_users_table.rs  m20220728_135506_create_campaigns_table.rs  m20220728_135522_create_adgroups_table.rs  m20220728_135531_create_ads_table.rs  m20220728_135554_create_adgroups_locations_table.rs
migrations/test-data/: 20220516042458_insert_todo_table.down.sql  20220516042458_insert_todo_table.up.sql  Cargo.toml
migrations/test-data/src/: lib.rs  m20220728_140143_insert_sample_into_advertisers.rs  m20220728_140424_insert_sample_into_advertiser_users.rs  m20220728_140434_insert_sample_into_campaigns.rs  m20220728_140448_insert_sample_into_adgroups.rs  m20220728_140455_insert_sample_into_ads.rs  m20220728_140508_insert_sample_into_location_owners.rs  m20220728_140516_insert_sample_into_locations.rs  m20220728_140525_insert_sample_into_signages.rs  m20220728_140533_insert_sample_into_adgroups_locations.rs  main.rs
rust-web-handson-app/: Cargo.toml
rust-web-handson-app/src/: lib.rs  modules.rs
rust-web-handson-app/src/usecase/: todo.rs
(+77 files in other folders)
