[package]
edition = "2021"
name = "rust-web-handson-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
derive-new = "0.5.9"
rust-web-handson-domain = {path = "../rust-web-handson-domain"}
rust-web-handson-infra = {path = "../rust-web-handson-infra"}
