[package]
edition = "2021"
name = "test-data"
publish = false
version = "0.1.0"

[lib]
name = "test_data"
path = "src/lib.rs"

[dependencies]
async-std = {version = "^1", features = ["attributes", "tokio1"]}
schema = {path = "../schema"}

[dependencies.sea-orm-migration]
features = [
  "runtime-tokio-native-tls",
  "sqlx-mysql",
]
version = "^0.9.0"
